# agentic-voodoo

./: .gitignore  .gitmodules  README.md
.github/workflows/: voodoo-bench-ci.yml  voodoo-bench-publish.yml
benchmarks/: algorithmic_art_bench.jac  brand_guidelines_bench.jac  canvas_design_bench.jac  claude_api_bench.jac  doc_coauthoring_bench.jac  docx_bench.jac  frontend_design_bench.jac  internal_comms_bench.jac  jac.toml  mcp_builder_bench.jac  measure.jac  patcher.py  pdf_bench.jac  pptx_bench.jac  run_all.sh  skill_creator_bench.jac  slack_gif_bench.jac  theme_factory_bench.jac  tools.jac  web_artifacts_bench.jac  webapp_testing_bench.jac  xlsx_bench.jac
benchmarks/baseline/: canvas_design_bench.jac  claude_api_bench.jac  doc_coauthoring_bench.jac  docx_bench.jac  internal_comms_bench.jac  pdf_bench.jac  slack_gif_bench.jac  theme_factory_bench.jac  web_artifacts_bench.jac  webapp_testing_bench.jac  xlsx_bench.jac
benchmarks/osp/: algorithmic_art_osp.jac  pdf_osp.jac  pptx_osp.jac
benchmarks/scripts/: plot_compare.py  run_3way_compare.sh  (+2 more)
docs/: research_story.md  slides_plan.md
examples/: healthcheck_byllm_osp.jac  skills_md_is_a_program.md  summarize_byllm_osp.jac  summarize_osp_lifted.jac
voodoo-bench/: README.md  pyproject.toml
voodoo-bench/examples/pdf_agent/: SKILL.md  agent.jac  voodoo-bench.toml
voodoo-bench/tests/: conftest.py  test_cli.py  test_e2e_mockllm.py  test_measure.py  test_model_factory.py  test_patcher.py  test_registry.py
voodoo-bench/voodoo_bench/: __init__.py  cli.jac  measure.jac  model_factory.jac  patcher.jac  registry.jac
(+22 files in other folders)
